[package]
name = "sync-ptr"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Alexander Schütz <aschuetz@protonmail.com>"]
keywords = ["pointer", "ffi", "sync", "send"]
categories = ["data-structures"]
description = "Sync & Send wrappers for raw pointer's"
readme = "README.md"
repository = "https://github.com/AlexanderSchuetz97/sync-ptr"

[dependencies]
